# NJUCode

./: .coveragerc  .env  .env.example  .gitignore  LICENSE  README.md  hello_world.py  idea.md  jingyu-test.md  main.py  pyproject.toml  requirements.txt  test_all_features.py  图形化界面改动记录.md  进度.md  需求文档.md  项目管理计划.md
.nju_code/: settings.json
examples/: metrics_showcase.py  tasks_showcase.py
frontend/: app.py  app.tcss  models.py  state.py
frontend/mcp/: __init__.py  executor.py  manager.py  models.py
frontend/services/: code_analysis.py  code_metrics.py  context_compressor.py  openai_client.py  patch_engine.py  project_testing.py  settings_store.py  task_index.py
frontend/skills/: __init__.py  executor.py  models.py  permissions.py  registry.py
frontend/skills/builtin/: __init__.py
frontend/ui/widgets/: chat_panel.py  code_viewer_panel.py  config_panel.py  file_tree_panel.py  mcp_panel.py  session_panel.py  skills_panel.py  splitter.py  tools_panel.py
njucode/: app.py  state.py
njucode/mcp/: client.py  models.py  tool_adapter.py
njucode/services/: code_analysis.py  code_extractor.py  openai_client.py  project_testing.py  runtime_tools.py
njucode/skills/: audit_log.py  registry.py
njucode/skills/builtin/: __init__.py
njucode/skills/plugins/: __init__.py
njucode/ui/widgets/: __init__.py  code_viewer_panel.py  file_tree_panel.py  mcp_panel.py  patch_panel.py  session_panel.py  skills_panel.py  tools_panel.py
手册/: SBOM清单.md  njucode-0.5.0-py3-none-any.whl  安装说明.md  测试分析报告（GB8567-88）.md  测试计划（GB8567-88）.md  需求文档.md  项目管理计划.md
改动/: 3.31_jingyu_change.md  4.16_jingyu_change.md  4.23_skills_mcp_integration.md  5.11_session_compress.md  5.22_project_doctor_test_suite.md  5.23_code_metrics_feature.md  5.23_task_index_feature.md  idea.md
